# pinc

./: .gitignore  .pre-commit-config.yaml  README.md  main.py  mlp.py  pyproject.toml  requirements.txt  train.py
pinc/: data.py  distance.py  download_from_wandb.py  eval.py  evaluation.py  experiment_logging.py  main.py  metrics.py  model.py  normal_consistency.py  run.py  run_eval.py  train.py  util.py  utils.py  visualize.py
scripts/: code_comparison.py  eval_all_first_runs_multiple.py  eval_all_runs.py  forward_pass_comparison.py  generate_eval_uncertainty_table.py  generate_nc_table.py  generate_plots.py  generate_result_table.py  generate_run_uncertainty_table.py  numerical_comparison.py  plot_reconstructions.py  run_eval_pinc_published_code.py
