[project]
name = "pinc"
version = "0.0.0"
readme = "README.md"
requires-python ="~=3.9"
dependencies = [
    "jax==0.4.23",
    "jaxlib==0.4.23",
    "optax==0.1.8",
    "scikit-image==0.22.0",
    "trimesh==4.0.9",
    "plyfile==1.0.3",
    "plotly==5.18.0"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
include = ["pinc/*"]

[tool.black]
skip-string-normalization = true
line-length = 130

[tool.ruff]
line-length = 130
