[project]
name = "pinc"
version = "0.0.0"
readme = "README.md"
requires-python ="~=3.9"
dependencies = [
    "jax==0.4.23",
    "jaxlib==0.4.23",
    "optax==0.1.8",
    "scikit-image==0.22.0",
    "trimesh==4.0.9",
    "plotly==5.18.0",
    "pre-commit==3.6.0",
    "wandb==0.16.2"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
include = ["pinc/*"]

[tool.ruff]
select = ["E", "F", "W", "C90", "UP", "SIM", "TID", "I"]
line-length = 130
ignore = ["E731"] # Allow named lambdas
preview = true

[tool.pyright]
reportIncompatibleMethodOverride = true
include = ["pinc"]
