[project]
name = "pinc"
version = "0.0.0"
readme = "README.md"
requires-python ="~=3.9"
dependencies = [
    "jax==0.4.23",
    "jaxlib==0.4.23",
    "optax==0.1.8",
    "scikit-image==0.22.0",
    "trimesh==4.0.9",
    "plotly==5.18.0",
    "wandb==0.16.2",
]

[project.optional-dependencies]
lint = [
    "pre-commit==3.6.0",
    "pyright==1.1.348",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
include = ["pinc/*"]

[tool.ruff]
select = [
    "F",  # flake8 (pyflakes)
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "I",  # isort
    "UP", # pyupgrade
    "BLE",  # flake8-blind-except
    "B",  # flake8-bugbear
    "A",  # flake8-builtins
    "INP",  # flake8-no-pep420
    "PIE",  # flake8-pie
    "Q",  # flake8-quotes
    "RET",  # flake8-return
    "SLF",  # flake8-self
    "SIM",  # flake8-simplify
    "TID",  # flask8-tidy-imports
    "TCH",  # flake8-type-checking
    "PTH",  # flake8-use-pathlib
    "NPY",  # numpy-specific rules
    "PERF",  # perflint
    "FURB",  # refurb
    "RUF",  # ruff-specific rules
]
line-length = 130
ignore = ["E731"] # Allow named lambdas
preview = true

[tool.black]
line-length = 130
preview = true

[tool.pyright]
reportIncompatibleMethodOverride = true
include = ["pinc"]
